@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.16545 2016/10/05 09:19:15 wiz Exp $
+$NetBSD: TODO,v 1.16546 2016/10/05 19:49:07 shattered Exp $
 
 Suggested new packages
 ======================
@@ -1201,7 +1201,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o p5-Chart-3.2
 	o p5-DBD-DB2-1.85
 	o p5-DBD-ODBC-1.52
-	o p5-DBD-Oracle-1.74
 	o p5-FormValidator-Simple-1.00
 	o p5-GStreamer-0.20
 	o p5-GraphViz2-2.37
